found mistake in tokeniser chat template leading to big difference in val and train losses. Fixed, hardcoded template into classifier eval function

--- a/notebooks/model_evaluation.ipynb
+++ b/notebooks/model_evaluation.ipynb
@@ -10,13 +10,15 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
+    "from transformers import AutoTokenizer\n",
     "from transformers import PreTrainedTokenizerFast\n",
     "from typing import Dict, Tuple\n",
-    "from transformers import AutoModelForCausalLM\n",
-    "\n",
-    "import pandas as pd"
+    "from transformers import AutoModelForCausalLM\n"
    ]
   },
   {
@@ -25,7 +27,7 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "def evaluate_llm_classifier(model_path: str, test_data: pd.DataFrame, tokenizer: PreTrainedTokenizerFast, tokenizer_template: str) -> Tuple[Dict[str, float | int], Dict[str, float]]:\n",
+    "def evaluate_llm_classifier(model_path: str, test_data: pd.DataFrame, tokenizer: PreTrainedTokenizerFast) -> Tuple[Dict[str, float | int], Dict[str, float]]:\n",
     "\n",
     "    model = AutoModelForCausalLM.from_pretrained(model_path)(\n",
     "        model_path=model_path,\n",
@@ -33,7 +35,9 @@
     "        device_map=\"auto\"\n",
     "    )\n",
     "\n",
-    "    tokenizer.chat_template(tokenizer_template)\n",
+    "    tokenizer.chat_template = None\n",
+    "\n",
+    "    tokenizer.chat_template = \"\"\"<|begin_of_text|>{% for message in messages %}<|start_header_id|>{{ message['role'] }}<|end_header_id|>{{ message['content'] }}<|eot_id|>{% endfor %}\"\"\"\n",
     "\n",
     "    true_labels = []\n",
     "    predicted_labels = []\n",
@@ -75,9 +79,55 @@
     "            \"format_violations\": len(format_violations)\n",
     "        }\n",
     "\n",
+    "        evaluation_confusion_matrix = confusion_matrix(true_labels, predicted_labels)\n",
+    "        plt.figure(figsize=(10,8))\n",
+    "        sns.heatmap(evaluation_confusion_matrix, annot=True, fmt=\"d\", cmap=\"Blues\")\n",
+    "        plt.title(\"Confusion Matrix\")\n",
+    "        plt.ylabel(\"True label\")\n",
+    "        plt.xlabel(\"Predicted label\")\n",
+    "        plt.show()\n",
+    "\n",
     "        return format_violations, metrics\n"
    ],
    "id": "1257b6e95d56603d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "test_df = pd.read_csv(\"../processed_data/test.csv\")",
+   "id": "2e1fc73c1422c2c2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "base_model_path = \"../models/llama_models/llama-3.2-3B\"",
+   "id": "3c3747358cda3ed4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "tokenizer = AutoTokenizer.from_pretrained(base_model_path, trust_remote_code=True)",
+   "id": "2ad084e8e1bf9f80"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "evaluate_llm_classifier(\n",
+    "    model_path=\"FILL_THIS_IN_AFTER_SAVING\",\n",
+    "    test_data=test_df,\n",
+    "    tokenizer=tokenizer\n",
+    ")"
+   ],
+   "id": "87cc190b38d8a3f6"
   }
  ],
  "metadata": {
