switching approach to seq_cls, pure classifier as opposed to a beaten-up LLM

--- a/notebooks/model_evaluation_seq_cls.ipynb
+++ b/notebooks/model_evaluation_seq_cls.ipynb
@@ -18,7 +18,7 @@
     "from transformers import AutoTokenizer\n",
     "from transformers import PreTrainedTokenizerFast\n",
     "from typing import Dict, Tuple\n",
-    "from transformers import AutoModelForCausalLM\n"
+    "from transformers import AutoModelForSequenceClassification\n"
    ]
   },
   {
@@ -29,11 +29,15 @@
    "source": [
     "def evaluate_llm_classifier(model_path: str, test_data: pd.DataFrame, tokenizer: PreTrainedTokenizerFast) -> Tuple[Dict[str, float | int], Dict[str, float]]:\n",
     "\n",
-    "    model = AutoModelForCausalLM.from_pretrained(model_path)(\n",
-    "        model_path=model_path,\n",
+    "    model = AutoModelForSequenceClassification.from_pretrained(\n",
+    "        model_path,\n",
     "        torch_dtype=torch.bfloat16,\n",
-    "        device_map=\"auto\"\n",
+    "        device_map=\"auto\",\n",
+    "        num_labels=2\n",
     "    )\n",
+    "\n",
+    "    tokenizer.pad_token = tokenizer.eos_token\n",
+    "    model.config.pad_token_id = tokenizer.eos_token_id\n",
     "\n",
     "    tokenizer.chat_template = None\n",
     "\n",
@@ -41,10 +45,8 @@
     "\n",
     "    true_labels = []\n",
     "    predicted_labels = []\n",
-    "    format_violations = []\n",
     "\n",
     "    for _, row in test_data.iterrows():\n",
-    "\n",
     "        messages = [\n",
     "            {\"role\": \"system\", \"content\": row[\"system\"]},\n",
     "            {\"role\": \"user\", \"content\": row[\"user\"]},\n",
@@ -52,34 +54,34 @@
     "\n",
     "        prompt = tokenizer.apply_chat_template(messages, tokenize=False)\n",
     "\n",
-    "        inputs = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
+    "        inputs = tokenizer(\n",
+    "            prompt,\n",
+    "            return_tensors=\"pt\",\n",
+    "            padding='max_length',\n",
+    "            truncation=True,\n",
+    "            max_length=512\n",
+    "        ).to(model.device)\n",
     "\n",
     "        with torch.no_grad():\n",
-    "            outputs = model.generate(\n",
-    "                **inputs,\n",
-    "                max_new_tokens=5\n",
-    "            )\n",
+    "            outputs = model(**inputs)\n",
     "\n",
-    "        prediction = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
+    "            logits = outputs.logits\n",
+    "            predictions = torch.softmax(logits, dim=-1)\n",
+    "            predicted_class = torch.argmax(predictions, dim=-1)\n",
     "\n",
-    "        pred_label = \"true\" in prediction.lower()\n",
+    "        pred_label = bool(predicted_class[0])\n",
     "        true_label = row[\"assistant\"].lower() == \"true\"\n",
-    "\n",
-    "        if prediction != \"true\" and prediction != \"false\":\n",
-    "            format_violations.append(messages)\n",
     "\n",
     "        true_labels.append(true_label)\n",
     "        predicted_labels.append(pred_label)\n",
-    "\n",
-    "    format_violation_score = (1 - len(format_violations) / len(test_data))\n",
     "\n",
     "    metrics = {\n",
     "        \"accuracy\": accuracy_score(true_labels, predicted_labels),\n",
     "        \"precision\": precision_score(true_labels, predicted_labels),\n",
     "        \"recall\": recall_score(true_labels, predicted_labels),\n",
     "        \"f1_score\": f1_score(true_labels, predicted_labels),\n",
-    "        \"format_violations\": len(format_violations),\n",
-    "        \"format_violation_score\": format_violation_score,\n",
+    "        \"true_labels\": true_labels,\n",
+    "        \"predicted_labels\": predicted_labels,\n",
     "    }\n",
     "\n",
     "    evaluation_confusion_matrix = confusion_matrix(true_labels, predicted_labels)\n",
@@ -90,7 +92,7 @@
     "    plt.xlabel(\"Predicted label\")\n",
     "    plt.show()\n",
     "\n",
-    "    return format_violations, metrics\n"
+    "    return metrics"
    ],
    "id": "1257b6e95d56603d"
   },
