--- a/notebooks/model_finetune_seq_cls.ipynb
+++ b/notebooks/model_finetune_seq_cls.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:09.648219Z",
-     "start_time": "2025-01-29T05:47:08.646243Z"
+     "end_time": "2025-01-29T11:56:03.592071Z",
+     "start_time": "2025-01-29T11:56:02.607575Z"
     }
    },
    "cell_type": "code",
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:09.660396Z",
-     "start_time": "2025-01-29T05:47:09.654223Z"
+     "end_time": "2025-01-29T11:56:03.599528Z",
+     "start_time": "2025-01-29T11:56:03.594080Z"
     }
    },
    "cell_type": "code",
@@ -60,16 +60,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:11.635555Z",
-     "start_time": "2025-01-29T05:47:09.726146Z"
+     "end_time": "2025-01-29T11:56:05.618227Z",
+     "start_time": "2025-01-29T11:56:03.665348Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from transformers import (\n",
-    "    AutoModelForCausalLM,\n",
     "    AutoTokenizer,\n",
-    "    TrainingArguments\n",
+    "    TrainingArguments,\n",
+    "    AutoModelForSequenceClassification,\n",
+    "    Trainer,\n",
+    "    DataCollatorWithPadding\n",
     ")\n",
     "\n",
     "from peft import (\n",
@@ -89,8 +91,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:11.895456Z",
-     "start_time": "2025-01-29T05:47:11.638412Z"
+     "end_time": "2025-01-29T11:56:05.906260Z",
+     "start_time": "2025-01-29T11:56:05.621062Z"
     }
    },
    "cell_type": "code",
@@ -106,8 +108,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:13.689183Z",
-     "start_time": "2025-01-29T05:47:11.898371Z"
+     "end_time": "2025-01-29T11:56:07.757737Z",
+     "start_time": "2025-01-29T11:56:05.909117Z"
     }
    },
    "cell_type": "code",
@@ -151,7 +153,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "Run data is saved locally in <code>E:\\PyCharm\\PycharmProjects\\repurposed-llm-phishing-classifier\\notebooks\\wandb\\run-20250129_134712-8ktc4p1h</code>"
+       "Run data is saved locally in <code>E:\\PyCharm\\PycharmProjects\\repurposed-llm-phishing-classifier\\notebooks\\wandb\\run-20250129_195606-1a30pjcm</code>"
       ]
      },
      "metadata": {},
@@ -163,7 +165,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/8ktc4p1h?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">charmed-wind-20</a></strong> to <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+       "Syncing run <strong><a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/1a30pjcm?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">generous-wave-29</a></strong> to <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
       ]
      },
      "metadata": {},
@@ -187,7 +189,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       " View run at <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/8ktc4p1h?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/8ktc4p1h?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986</a>"
+       " View run at <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/1a30pjcm?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/1a30pjcm?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986</a>"
       ]
      },
      "metadata": {},
@@ -211,8 +213,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:13.695776Z",
-     "start_time": "2025-01-29T05:47:13.693280Z"
+     "end_time": "2025-01-29T11:56:07.764562Z",
+     "start_time": "2025-01-29T11:56:07.761462Z"
     }
    },
    "cell_type": "code",
@@ -229,8 +231,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:13.971549Z",
-     "start_time": "2025-01-29T05:47:13.699576Z"
+     "end_time": "2025-01-29T11:56:08.043783Z",
+     "start_time": "2025-01-29T11:56:07.768029Z"
     }
    },
    "cell_type": "code",
@@ -328,8 +330,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:13.979574Z",
-     "start_time": "2025-01-29T05:47:13.976928Z"
+     "end_time": "2025-01-29T11:56:08.067193Z",
+     "start_time": "2025-01-29T11:56:08.064562Z"
     }
    },
    "cell_type": "code",
@@ -347,8 +349,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:16.725059Z",
-     "start_time": "2025-01-29T05:47:13.996496Z"
+     "end_time": "2025-01-29T11:56:10.828200Z",
+     "start_time": "2025-01-29T11:56:08.085484Z"
     }
    },
    "cell_type": "code",
@@ -356,8 +358,9 @@
     "# WARNING: flash_attention_2 required pip install flash-attn which needs C++ builds tools\n",
     "# It also takes absolutely forever to compile because it's compiling CUDA kernels\n",
     "\n",
-    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(\n",
     "    base_model_path,\n",
+    "    num_labels=2,\n",
     "    device_map=model_config[\"device_map\"],\n",
     "    torch_dtype=model_config[\"torch_dtype\"],\n",
     "    attn_implementation=model_config[\"attn_implementation\"]\n",
@@ -373,11 +376,19 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "396d94bcd3e9484eadd8d87fee02e4a5"
+       "model_id": "6e7ce47d5fcc4b27add8ed814f0664d8"
       }
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of LlamaForSequenceClassification were not initialized from the model checkpoint at ../models/llama_models/llama-3.2-3B and are newly initialized: ['score.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
     }
    ],
    "execution_count": 9
@@ -385,8 +396,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:16.943599Z",
-     "start_time": "2025-01-29T05:47:16.739062Z"
+     "end_time": "2025-01-29T11:56:11.035700Z",
+     "start_time": "2025-01-29T11:56:10.830203Z"
     }
    },
    "cell_type": "code",
@@ -398,8 +409,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:16.948644Z",
-     "start_time": "2025-01-29T05:47:16.945604Z"
+     "end_time": "2025-01-29T11:56:11.052562Z",
+     "start_time": "2025-01-29T11:56:11.049847Z"
     }
    },
    "cell_type": "code",
@@ -415,8 +426,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:16.969604Z",
-     "start_time": "2025-01-29T05:47:16.962949Z"
+     "end_time": "2025-01-29T11:56:11.073634Z",
+     "start_time": "2025-01-29T11:56:11.066392Z"
     }
    },
    "cell_type": "code",
@@ -447,8 +458,24 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:17.749011Z",
-     "start_time": "2025-01-29T05:47:17.037283Z"
+     "end_time": "2025-01-29T11:56:11.090588Z",
+     "start_time": "2025-01-29T11:56:11.087532Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "model.config.pad_token_id = tokenizer.eos_token_id"
+   ],
+   "id": "d2d87b5903dd656c",
+   "outputs": [],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-29T11:56:22.305544Z",
+     "start_time": "2025-01-29T11:56:11.105759Z"
     }
    },
    "cell_type": "code",
@@ -457,8 +484,9 @@
     "\n",
     "train_dataset = Dataset.from_pandas(pd.read_csv(train_dataset_path))\n",
     "\n",
-    "def format_chat_template_batch(examples, tokenizer):  # Add tokenizer as parameter\n",
+    "def format_chat_template_batch(examples, tokenizer):\n",
     "    formatted_texts = []\n",
+    "    labels = []\n",
     "\n",
     "    for system, user, assistant in zip(\n",
     "        examples[\"system\"],\n",
@@ -471,8 +499,18 @@
     "            {\"role\": \"assistant\", \"content\": str(assistant)}\n",
     "        ]\n",
     "        formatted_texts.append(tokenizer.apply_chat_template(row_json, tokenize=False))\n",
+    "        labels.append(1 if str(assistant).lower() == \"true\" else 0)\n",
     "\n",
-    "    examples[\"text\"] = formatted_texts\n",
+    "    tokenized = tokenizer(\n",
+    "        formatted_texts,\n",
+    "        padding='max_length',\n",
+    "        truncation=True,\n",
+    "        max_length=512,\n",
+    "        return_tensors=None\n",
+    "    )\n",
+    "\n",
+    "    examples.update(tokenized)\n",
+    "    examples[\"labels\"] = labels\n",
     "    return examples\n",
     "\n",
     "\n",
@@ -494,20 +532,20 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "88ca8922be9748d8b75ac4223837ab68"
+       "model_id": "00cd91601e8340fabdff4cdc1dbe880d"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 13
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:17.961550Z",
-     "start_time": "2025-01-29T05:47:17.765444Z"
+     "end_time": "2025-01-29T11:56:23.310268Z",
+     "start_time": "2025-01-29T11:56:22.320965Z"
     }
    },
    "cell_type": "code",
@@ -530,20 +568,20 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "172b5b567a684ab68d0acc02b9c8a227"
+       "model_id": "7eb03bc083d849b5a5abc7f80b20f2fd"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 14
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:18.179857Z",
-     "start_time": "2025-01-29T05:47:17.976064Z"
+     "end_time": "2025-01-29T11:56:23.551153Z",
+     "start_time": "2025-01-29T11:56:23.325818Z"
     }
    },
    "cell_type": "code",
@@ -556,7 +594,7 @@
     "        \"down_proj\", \"up_proj\"\n",
     "    ],\n",
     "    bias=\"none\",\n",
-    "    task_type=\"CAUSAL_LM\",\n",
+    "    task_type=\"SEQ_CLS\",\n",
     "    inference_mode=False\n",
     ")\n",
     "\n",
@@ -564,13 +602,13 @@
    ],
    "id": "8fd2c40131e850aa",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:18.241395Z",
-     "start_time": "2025-01-29T05:47:18.199677Z"
+     "end_time": "2025-01-29T11:56:23.609451Z",
+     "start_time": "2025-01-29T11:56:23.570616Z"
     }
    },
    "cell_type": "code",
@@ -581,7 +619,7 @@
     "    per_device_eval_batch_size=2,\n",
     "    gradient_accumulation_steps=16,\n",
     "    optim=\"adamw_torch_fused\",\n",
-    "    num_train_epochs=13,\n",
+    "    num_train_epochs=10,\n",
     "    save_strategy=\"epoch\",\n",
     "    eval_strategy=\"epoch\",\n",
     "    do_eval=True,\n",
@@ -605,57 +643,41 @@
    ],
    "id": "f0aee664e91757ee",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T05:47:29.425948Z",
-     "start_time": "2025-01-29T05:47:18.263265Z"
+     "end_time": "2025-01-29T11:56:23.632334Z",
+     "start_time": "2025-01-29T11:56:23.629530Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)",
+   "id": "4d10c9f217e3f02f",
+   "outputs": [],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-29T11:56:23.661442Z",
+     "start_time": "2025-01-29T11:56:23.651030Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "trainer = SFTTrainer(\n",
+    "trainer = Trainer(\n",
     "    model=model,\n",
+    "    args=training_arguments,\n",
     "    train_dataset=train_dataset,\n",
     "    eval_dataset=test_dataset,\n",
-    "    peft_config=peft_config,\n",
-    "    args=training_arguments\n",
+    "    data_collator=data_collator\n",
     ")"
    ],
    "id": "3503b45bfcc974f",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Map:   0%|          | 0/14920 [00:00<?, ? examples/s]"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "45cce214b184414e90185b9ff76a7ced"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Map:   0%|          | 0/3730 [00:00<?, ? examples/s]"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "9a02a3b7482c487d8729e1e4f73c0571"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "execution_count": 17
+   "outputs": [],
+   "execution_count": 19
   },
   {
    "metadata": {
@@ -663,7 +685,7 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2025-01-29T05:47:29.443645Z"
+     "start_time": "2025-01-29T11:56:23.678043Z"
     }
    },
    "cell_type": "code",
@@ -679,8 +701,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='3' max='6058' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [   3/6058 00:05 < 8:38:44, 0.19 it/s, Epoch 0.00/13]\n",
+       "      <progress value='8' max='4660' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [   8/4660 00:15 < 3:15:20, 0.40 it/s, Epoch 0.02/10]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -704,18 +726,18 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "wandb.finish()",
-   "id": "949a8843950da24"
+   "id": "a968ba6c0d29438e",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "trainer.model.save_pretrained(new_model_path)",
-   "id": "9835c261752a8eb2"
+   "id": "a7ff890c53b5ce44",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
